--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ repository = "https://github.com/NullSurplus/rustnbt"
 license-file = "LICENSE"
 keywords = ["minecraft", "nbt", "serialization","formats"]
 categories = ["parsing", "encoding", "data-structures"]
+# Not ready for release, so we'll leave this here for now.
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
