--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,5 +23,6 @@ num-traits = "0.2.15"
 indexmap = { version = "1.9.1", optional = true }
 bytemuck = "1.12.1"
 chumsky = "0.8.0"
+rustnbtmacro = { path = "rustnbtmacro" }
 
 [workspace]
